# information_state

./: BASELINE_BLOOD_CULTURE_RESULTS.md  BLOOD_CULTURE_FEATURE_REFERENCE.md  CHANGELOG.md  CITATION.cff  CLINICIAN_OVERVIEW.md  CONTRIBUTING.md  EDA_BLOOD_CULTURE_LABEL_VALIDITY.md  LICENSE  NATURE_STYLE_MANUSCRIPT_DRAFT.md  PRIMARY_BASELINE_EXPLAINABILITY.md  README.md  STATE_FROM_OBSERVATION.md  pyproject.toml  requirements-lock.txt  requirements.txt
examples/: blood_culture_feature_example_synthetic.csv
information_state/: __init__.py  aki_cohort.py  cluster_states.py  config.py  contrastive.py  evaluate_aki_phenotypes.py  evaluate_observation_robustness.py  evaluate_phenotypes.py  extract_embeddings.py  feature_catalog.py  observation_data.py  state_from_observation.py  train_ssl.py  utils.py
jobs/: run_aki_kdigo_pipeline_farm22.lsf  train_full_mimic_farm22.lsf  train_subset_from_full_artifacts_farm22.lsf
mimic_iv_project/: __init__.py  blood_culture.py  config.py  data_pipeline.py  state_from_observation.py  train_ssl.py
notebooks/: 01_state_from_observation_demo.ipynb
reports/: blood_culture_first_alert_project_report.md  blood_culture_important_pruned_metrics.json  s_aureus_first_alert_feature_correlation_matrix.csv  s_aureus_first_alert_metrics.json  s_aureus_first_alert_pruned_metrics.json  s_aureus_first_alert_pruned_report.md  s_aureus_first_alert_report.md  s_aureus_first_alert_shap_importance.csv  s_aureus_first_blood_culture_metrics.json  s_aureus_first_blood_culture_report.md  s_aureus_same_episode_enriched_explainability_summary.json  (+14 more)
(+23 files in other folders)
