[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "information-state"
version = "0.1.0"
description = "State-from-Observation representation learning for ICU EHR."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Information State contributors" }
]
keywords = ["critical-care", "mimic-iv", "representation-learning", "self-supervised-learning"]
dependencies = [
  "matplotlib>=3.10,<4",
  "numpy>=2.2,<3",
  "pandas>=2.3,<3",
  "scikit-learn>=1.7,<2",
  "torch>=2.9,<3",
  "tqdm>=4.67,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
information-state-train = "information_state.train_ssl:main"
information-state-extract = "information_state.extract_embeddings:main"
information-state-cluster = "information_state.cluster_states:main"
information-state-evaluate = "information_state.evaluate_phenotypes:main"
information-state-evaluate-aki = "information_state.evaluate_aki_phenotypes:main"
information-state-robustness = "information_state.evaluate_observation_robustness:main"

[tool.setuptools.packages.find]
include = ["information_state*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
